# ModEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  benchmark.sh  install-info.md  lint.sh  perf.sh  todo
buildtest/: main.cpp
docs/: index.html
lib/effekseer/: CMakeLists.txt  Help_Cpp_En.html  Help_Cpp_Ja.html  LICENSE.txt  LICENSE_RUNTIME_DIRECTX.txt  LICENSE_RUNTIME_VULKAN.txt  build_msvc2017_x64.bat  build_msvc2017_x86.bat  build_msvc2019_x64.bat  build_msvc2019_x86.bat  build_msvc2022_x64.bat  build_msvc2022_x86.bat  build_vulkan_msvc2019_x64.bat  build_vulkan_msvc2019_x86.bat  build_vulkan_msvc2022_x64.bat  build_vulkan_msvc2022_x86.bat
lib/effekseer/Examples/: CMakeLists.txt
lib/effekseer/cmake/: FilterFolder.cmake  LinkAppleLibs.cmake
lib/effekseer/src/: CMakeLists.txt
lib/ffmpeg_n4.4.1/: config.asm  config.h  config_components.h
lib/ffmpeg_n4.4.1/doc/: config.texi
lib/ffmpeg_n4.4.1/ffbuild/: bin2c  config.fate  config.mak  config.sh
lib/ffmpeg_n4.4.1/libavcodec/: codec_list.c
lib/ffmpeg_n4.4.1/libavformat/: demuxer_list.c
lib/glad/src/: glad.c
lib/imgui/: README.md
lib/stb/: stb_image_resize2.cpp  stb_image_write.cpp  stb_image_write.h
misc/: autostructpopulate_poc.cpp  bugs  notes  oldserialization.cpp  oldvoxelcode  particles  scratch.scm  showscene.sh  statemachine  todo  todo2  weaponideas
packaging/: install.sh  uninstall.sh
packaging/modeditor/: app.desktop  run.sh
perf/: attach-perf.sh  benchmark.sh  install.sh  perf.php  perf.sh  report.sh
res/: default.style  example_resource_file  generate-spritesheet.py  layers.layerinfo  postprocessing  test.style  world.state
res/data/: servers
res/data/sql/: .~lock.traits.csv#  dialog_nodes.csv  (+14 more)
res/fonts/: readme.md
res/input/: key.combos  key.mapping
res/models/: normalbox.gltf  skybox.mtl
res/octrees/: testoctree.map
res/particles/: Laser01.efkefc  Laser02.efkefc  backgrounds.efkefc  blood.efkefc  crazy.efk  crazy.efkefc  dark.efkefc  electric.efkefc  fire.efkefc  firework.efkefc  fog.efkefc  plague.efkefc  rain.efkefc  rain2.efkefc  randcolor.efkefc  spirit-white.efkefc  spirit.efkefc  splash.efkefc  square_b.efkefc  warp.efkefc  waterfall.efkefc
res/recordings/: record.rec
res/scenes/: 0.0.0  animation.rawscene  art_test1.p.rawscene  chunks.mapping  empty.p.rawscene  example.p.rawscene  example.rawscene  example2.rawscene  example_save.rawscene  multinode.rawscene  nothing.rawscene  unitcube.rawscene
res/scripts/: alert.scm  attribute-editor.scm  beforeunload.scm  collision.scm  color.scm  console.scm  controls.scm  echo.scm  enterclick.scm  enterkeyevent.scm  forge.scm  game.scm  interpolate.scm  layers.scm  letterbox.scm  loading.scm  loadscene.scm  machine-test.scm  makeobject.scm  nav.scm  playsound.scm  playtargetanim.scm  printanimations.scm  record.scm  reset-scene.scm  save-scene.scm  screenshotdebug.scm  scrollfontsize.scm  statemachine.scm  tcp-test2.scm  test.scm  textdemo.scm  time.scm  toggle-input.scm  vector.scm
res/shaders/: simple-shader.glsl
res/some_resource_folder/: nested_resource.txt
res/tools/: backupGenerate.py  classifiedgui.py  export-clean.sh  export-model.make  export-model.py  export-model.sh  generate-chunks.py  generate-spritesheet-gui.py  generate-spritesheet.py  generate_spritesheet_gui.py  gradient.mat  import-mocap-blender.py  my_image_sprite.py  shader-assembly.sh  showscene.sh
scribbles/: api.scm  api_design  goals  todo
src/: .main.cpp.swm  .main.cpp.swn  ainav.cpp  ainav.h  animation.cpp  animation.h  benchmark.cpp  benchmark.h  benchstats.cpp  benchstats.h  camera.cpp  camera.h  colorselection.cpp  colorselection.h  customobj.cpp  customobj.h  drawing.cpp  drawing.h  easy_use.cpp  easy_use.h  editor.cpp  editor.h  effekseer.cpp  effekseer.h  extensions.cpp  extensions.h  gui.cpp  gui.h  guile.cpp  guile.h  input.cpp  input.h  keymapper.cpp  keymapper.h  layers.cpp  layers.h  lines.cpp  lines.h  loadmodel.cpp  loadmodel.h  (+84 more)
src/common/: backup  backupo  file.cpp  files.h  http.cpp  http.h  profiling.cpp  profiling.h  symbols.cpp  symbols.h  sysinterface.h  util.cpp  util.h  util_test.cpp  util_test.h  watch_file.cpp  watch_file.h
src/cscript/: backup  cscript.cpp  cscript.h  cscript_binding.cpp  cscript_binding.h  cscript_sample.cpp  cscript_sample.h
src/customobj/: customobj.cpp  customobj.h  customobj_binding.cpp  customobj_binding.h  customobj_sample.cpp  customobj_sample.h
src/easyuse/: easy_use.cpp  easy_use.h  editor.cpp  editor.h  manipulator.cpp  manipulator.h  manipulator_drawing.cpp  manipulator_drawing.h
src/gizmo/: keymapper.cpp  keymapper.h  sequencer.cpp  sequencer.h
src/network/: activemanager.cpp  activemanager.h  common.cpp  common.h  crud.cpp  crud.h  http.cpp  http.h  modnet.cpp  modnet.h  netscene.cpp  netscene.h  network.cpp  network.h  servers.cpp  servers.h
src/perf/: benchmark.cpp  benchmark.h  benchstats.cpp  benchstats.h  profiling.cpp  profiling.h
src/scene/: bulletdebug.cpp  bulletdebug.h  collision_cache.cpp  collision_cache.h  emitter.cpp  emitter.h  object_types.cpp  object_types.h  physics.cpp  physics.h  physics_common.cpp  physics_common.h  rails.cpp  rails.h  recorder.cpp  recorder.h  scene.cpp  scene.h  scene_debug.cpp  scene_debug.h  scene_lighting.cpp  scene_lighting.h  scene_object.cpp  scene_object.h  scene_offline.cpp  scene_offline.h  scene_sandbox.cpp  scene_sandbox.h  scene_sandbox_test.cpp  scene_sandbox_test.h  scenegraph.cpp  scenegraph.h  serialization.cpp  serialization.h  serialobject.cpp  serialobject.h  styles.cpp  styles.h  sysinterface.h  voxels.cpp  (+3 more)
src/scheme/: scheme_bindings.cpp  scheme_bindings.h  scheme_util.cpp  scheme_util.h  scriptmanager.cpp  scriptmanager.h
src/sounds/: sound.cpp  sound.h  soundmanager.cpp  soundmanager.h
src/sql/: .gitignore  Makefile  exec.sql  plugin.cpp  plugin.h  shell.cpp  shell.h  show.sh  sql.cpp  sql.h  sqlparse.cpp  sqlparse.h  sqlparse_test.cpp  sqlparse_test.h  todo  util.cpp  util.h
src/tests/: main_test.cpp  main_test.h
src/ui/: gui.cpp  gui.h  widgets.cpp  widgets.h
(+1368 files in other folders)
